@@ -3,6 +3,7 @@
 !  More fixes to ability adjust section
 !  Removed some unnecessary code sections
 !  Temporary fix for elemental explosion
++  Added rolldodge to be shown on progressbar when tracking GCD
 
 2024-06-16 v1.6.6
 !  Changed the way dodge was detected for more accurate results
